bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
  if (char getIndication()==R){
      ^BDR:3: error: not found: value R
  if (char getIndication()==R){
                            ^BDR:6: error: not found: value char
  else if (char getIndication()==L){
           ^BDR:6: error: not found: value L
  else if (char getIndication()==L){
                                 ^BDR:9: error: not found: value char
  else if (char getIndication()==I){
           ^BDR:9: error: not found: value I
  else if (char getIndication()==I){
                                 ^BDR:13: error: not found: value char
  else if (char getIndication()==A){
           ^BDR:13: error: not found: value A
  else if (char getIndication()==A){
                                 ^BDR:15: error: not found: value char
  else if (char getIndication()==B){
           ^BDR:15: error: not found: value B
  else if (char getIndication()==B){
                                 ^BDR:17: error: not found: value char
  else if (char getIndication()==C){
           ^BDR:17: error: not found: value C
  else if (char getIndication()==C){
                                 ^BDR:19: error: not found: value char
  else if (char getIndication()==Z){
           ^BDR:19: error: not found: value Z
  else if (char getIndication()==Z){
                                 ^BDR:21: error: not found: value char
  else if (char getIndication()==Y){
           ^BDR:21: error: not found: value Y
  else if (char getIndication()==Y){
                                 ^BDR:23: error: not found: value char
  else if (char getIndication()==X){
           ^BDR:23: error: not found: value X
  else if (char getIndication()==X){
                                 ^