bdr.BDR.scala.code
var finished=false
while (finished!=true) {
  if (char getIndication()==R){
    right()
    forward()}
  else if (char getIndication()==L){
    left()
    forward()}
  else if (char getIndication()==I){
    left()
    left()
    forward()}
  else if (char getIndication()==A){
    forward()}
  else if (char getIndication()==B){
    forward(2)}
  else if (char getIndication()==C){
    forward(3)}
  else if (char getIndication()==Z){
    backward()}
  else if (char getIndication()==Y){
    backward(2)}
  else if (char getIndication()==X){
    backward(3)}
  else finished=true}